fix: scrollbar color on firefox and chrome

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,20 +29,7 @@ body::-webkit-scrollbar {
   width: 15px;
 }
 
-body {
+html {
   scrollbar-width: thick;
   scrollbar-color: #a2de4c #424242;
-}
-body::-webkit-scrollbar-track {
-  background: #424242;
-}
-body::-webkit-scrollbar-thumb {
-  background-color: #a2de4c;
-  border-radius: 20px;
-  border: 2px solid #424242;
-
-  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-    0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
-    0 2px 4px -1px rgba(0, 0, 0, 0.3);
 }
